--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <div class="work">
                         <img src="work-1.png">
                         <div class="layer">
-                            <h3>Social Media App</h3>
+                            <a href ="https://ravinagotra.github.io/Roshambo-github.io/">Social Media App</a>
                             <p>This app connect you to the talented people around the world.
                                 dawnload it from google play store
                             </p>
