--- a/index.html
+++ b/index.html
@@ -140,9 +140,8 @@
                     <div class="work">
                         <img src="work-1.png">
                         <div class="layer">
-                            <a href ="https://ravinagotra.github.io/Roshambo-github.io/">Social Media App</a>
-                            <p>This app connect you to the talented people around the world.
-                                dawnload it from google play store
+                            <a href ="https://ravinagotra.github.io/Roshambo-github.io/">Rock Paper Scissors Game</a>
+                            <p>This website connect to you Rock Paper Scissors game you can play by using link</p>
                             </p>
                             <i class="fa-solid fa-arrow-up-right-from-square"></i>
                         </div>
